tests/cases/compiler/missingCloseBraceInObjectLiteral/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/missingCloseBraceInObjectLiteral.ts`, Apache-2.0 License

var foo = {
  a: 'a',
  b: 'b',
  c: 'c'
//~ ERROR: '}' expected.